# OpenMMReasoner

./: README.md  index.html
data_pipeline/: .gitignore  distill_response.py  pyproject.toml
data_pipeline/examples/: deduplicate_data.sh  distill_dataset.sh  embed_data.sh  example_rl_config.yaml  example_sft_config.yaml
data_pipeline/src/openmmdata/: utils.py
data_pipeline/src/openmmdata/encoder/: __init__.py  cnn.py  wordvec.py
data_pipeline/src/openmmdata/preprocess/: __init__.py  deduplicate.py  embed.py  filter.py
data_pipeline/src/openmmdata/strategy/: __init__.py
data_pipeline/src/openmmdata/strategy/filter/: __init__.py  base_filter.py  length_filter.py  ppl_filter.py
examples/openmmreasoner/: download_data.sh  eval.sh  gspo_n16.sh  gspo_ray.sh  sft_example_config.yaml  sft_example_launch.sh
